# (c) 2011 Mandriva, http://www.mandriva.com
#
# $Id$
#
# This file is part of Mandriva Pulse2 project.
#
# This software is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <http://www.gnu.org/licenses/>.
#
# Author(s):
#   Jean Parpaillon <jparpaillon@mandriva.com>
#
dist_sbin_SCRIPTS = pulse2-msc-clean-database

EXTRA_DIST = pulse2-msc-clean-database.README \
	analysis/command_evolution_from_coh_table.py \
	analysis/scheduler_health_using_logs.py \
	analysis/command_evolution_using_logs.py \
	analysis/command_evolution_from_history_table.py \
	quick_actions/104mdv_test_sleep_1minute.msc \
	quick_actions/001reboot.msc \
	quick_actions/101mdv_test_utf8.msc \
	quick_actions/002shutdown.msc \
	quick_actions/007wake_on_lan.msc \
	quick_actions/103mdv_test_demux.msc \
	quick_actions/102mdv_test_blocking.msc \
	quick_actions/006run_inventory_win32.msc \
	sql/schema-008.sql sql/schema-014.sql sql/schema-013.sql \
	sql/schema-011.sql sql/install.sh sql/clean-db.sql \
	sql/schema-015.sql sql/schema-001.sql sql/schema-010.sql \
	sql/schema-012.sql sql/schema-004.sql sql/schema-007.sql \
	sql/schema-002.sql sql/schema-005.sql sql/schema-003.sql \
	sql/purge-old-rows.sql sql/schema-016.sql sql/README \
	sql/schema-006.sql sql/schema-009.sql

