# (c) 2011 Mandriva, http://www.mandriva.com
#
# $Id$
#
# This file is part of Mandriva Pulse2 project.
#
# This software is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <http://www.gnu.org/licenses/>.
#
# Author(s):
#   Jean Parpaillon <jparpaillon@mandriva.com>
#
EXTRA_DIST = some_examples/wscp0308beta/conf.xml some_examples/wscp0308beta/install.bat \
	some_examples/tb02000012/conf.xml some_examples/tb02000012/install.bat \
	some_examples/ooo02000000/install.bat \
	some_examples/ooo02030000/install.bat \
	some_examples/nvu0100/conf.xml some_examples/nvu0100/install.bat \
	some_examples/tb02000016/conf.xml some_examples/tb02000016/install.bat \
	some_examples/ff030001/conf.xml some_examples/ff030001/install.bat \
	some_examples/ff02000009/conf.xml some_examples/ff02000009/install.bat \
	some_examples/tb02000009/conf.xml some_examples/tb02000009/install.bat \
	some_examples/ff02000016/conf.xml some_examples/ff02000016/install.bat \
	some_examples/ff02000012/conf.xml some_examples/ff02000012/install.bat \
	some_examples/download-thunderbird-setup.sh \
	some_examples/download-firefox-setup.sh \
	some_examples/summon-dummy-packages.sh some_examples/summon-dummy-packages.xml \
	tests/pserver-max-dl tests/pserver-plist tests/pserver-max-tcp-conn
