# (c) 2011 Mandriva, http://www.mandriva.com
#
# $Id$
#
# This file is part of Mandriva Pulse2 project.
#
# This software is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <http://www.gnu.org/licenses/>.
#
# Author(s):
#   Jean Parpaillon <jparpaillon@mandriva.com>
#
qadir = $(localstatedir)/lib/pulse2/qactions
qa_DATA = \
	001reboot.msc \
	002shutdown.msc \
	006run_inventory_win32.msc \
	007wake_on_lan.msc \
        008remote_desktop_without_approval.msc \
        009remote_desktop_with_approval.msc \
	010wol_with_imaging.msc
        

qaexamplesdir = $(docdir)/qactions
qaexamples_DATA = \
	101mdv_test_utf8.msc \
	102mdv_test_blocking.msc \
	103mdv_test_demux.msc \
	104mdv_test_sleep_1minute.msc
